# copy-bot-solana

./: .env.copy.example  .gitignore  Anchor.toml  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml  geyser_config.json
crates/biscuit/: Cargo.toml
crates/biscuit/migrations/: 0_init.sql
crates/biscuit/src/: lib.rs
crates/biscuit/src/analytics/: birdeye.rs  coingecko.rs  dump.rs  mod.rs  price_history.rs  wallet.rs
crates/biscuit/src/analytics/database/: mod.rs
crates/biscuit/src/analytics/migrations/: 0_init.sql
crates/biscuit/src/constants/: mints.rs  mod.rs  programs.rs
crates/biscuit/src/core/: mod.rs
crates/biscuit/src/core/traits/: mod.rs  streaming.rs  transaction_cache.rs  txn_extensions.rs  txn_filters.rs
crates/biscuit/src/core/types/: block.rs  mod.rs  transaction.rs  wire_transaction.rs
crates/biscuit/src/database/: cache.rs  mod.rs
crates/biscuit/src/database/sqlite/: mod.rs
crates/biscuit/src/parser/: mod.rs  swap.rs
crates/biscuit/src/parser/v1/: jupiter_v6.rs  mod.rs  orca.rs  raydium_v4.rs  raydium_v6.rs
crates/biscuit/src/parser/v1/logs/: jupiter_v6.rs  mod.rs  pump.rs
crates/biscuit/src/parser/v2/: mod.rs
crates/biscuit/src/services/: mod.rs  ore.rs
crates/biscuit/src/services/copy/: config.rs  history.rs  mod.rs  notes.md  server.rs
crates/biscuit/src/services/copy/storage/: file.rs  mod.rs  postgres.rs
crates/biscuit/src/services/copy/v1/: mod.rs
crates/biscuit/src/services/copy/v2/: dust.rs  execution.rs  mod.rs  ping.rs  service.rs  simulator.rs
crates/biscuit/src/services/testing/: mod.rs
crates/biscuit/src/swap/: builder.rs  execution.rs  mod.rs  token_extensions.rs  utils.rs
crates/biscuit/src/swap/jupiter/: executor.rs  mod.rs  price.rs  price_old.rs  token_list_new.rs  token_list_old.rs
crates/biscuit/src/swap/orca/: api.rs  filter.rs  mod.rs  quote.rs  utils.rs
crates/biscuit/src/swap/pump/: bonding_curve.rs  executor.rs  mod.rs
crates/biscuit/src/swap/raydium/: mod.rs
crates/biscuit/src/swap/raydium/amm/: executor.rs  filter.rs  mod.rs
crates/biscuit/src/swap/raydium/api/: mod.rs
crates/biscuit/src/swap/raydium/api/v2/: amm.rs  clmm.rs
crates/biscuit/src/swap/raydium/api/v3/: client.rs  mod.rs  token_list.rs
crates/biscuit/src/swap/raydium/api/v3/response/: mod.rs  token.rs
crates/biscuit/src/swap/raydium/api/v3/response/pools/: base.rs  clmm.rs  cpmm.rs  standard.rs
crates/biscuit/src/swap/raydium/clmm/: filter.rs  mod.rs  quote.rs
crates/biscuit/src/utils/: fees.rs  lookup_tables.rs  mod.rs  retry.rs  token.rs  token_instr.rs
crates/biscuit/src/utils/serde_helpers/: field_as_string.rs  field_as_string_collection.rs  field_as_string_or_self.rs  mod.rs  option_field_as_string.rs  option_pubkey.rs  pubkey.rs
crates/biscuit/src/wire/: confirm_txn.rs  jito.rs  lookup_tables.rs  mod.rs
crates/biscuit/src/wire/geyser/: mod.rs  subscribe_blockhash.rs  subscribe_transactions.rs  subscribe_transactions_legacy.rs
crates/biscuit/src/wire/helius_rpc/: error.rs  mod.rs  request_handler.rs  types.rs
crates/biscuit/src/wire/rpc/: historical_transactions.rs  mod.rs  poll_blockhash.rs  poll_blocks.rs  poll_slot_leaders.rs  poll_slots.rs  poll_transactions.rs  poll_wallet_balances.rs  subscribe_blocks.rs  utils.rs
crates/biscuit/src/wire/send_txn/: blocking_executor.rs  mod.rs  service.rs
crates/programs/copy/: Cargo.toml
crates/programs/copy/src/: lib.rs
js/: package.json  tsconfig.json
js/src/: convert_idls.ts  kinobi_gen.js  orca_quote.ts  shank.js
