[workspace]
default-members = ["crates/biscuit"]
members = [
    "crates/biscuit", 
    "crates/programs/*"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-syn = {version = "0.29.0", features = ["idl-types"]}
anyhow = "1.0.81"
arrayref = { version = "0.3.6" }
async-trait = "0.1.79"
borsh = "0.10.3"
borshv1 = { package = "borsh", version = "1.5.1" }
copy = { path = "crates/programs/copy" }
clap = { version = "3", features = [ "derive", "env" ] }
dashmap = "5.5.3"
dotenv = "0.15.0"
env_logger = "0.10.1"
flate2 = "1.0.19"
futures = "0.3.30"
futures-util = "0.3.30"
log = "=0.4.20"
num-traits = "0.2.19"
num-derive = "0.3.3"
once_cell = "1"
rand = "0.8.5"
raydium_amm = { git = "https://github.com/reactive-biscuit/raydium-amm.git", branch = "patch/solana-v1.18.16", default-features = false, features = [
    "client",
] }
raydium-amm-v3 = { git = "https://github.com/reactive-biscuit/raydium-clmm.git", branch = "patch/solana-v1.18.16" }
raydium_client = { package = "client", git = "https://github.com/reactive-biscuit/raydium-clmm.git", branch = "patch/solana-v1.18.16" }
raydium-library = { git = "https://github.com/reactive-biscuit/raydium-library.git", branch = "u128-fix" }
regex = "1"
reqwest = { version = "0.12.4", features = ["json", "native-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
solana-account-decoder = "1.18.16"
solana-client = "1.18.16"
solana-devtools-tx = { git = "https://github.com/ebrightfield/solana-devtools/", rev = "4b8f2802fba3f17c3b40e333e8c0104a4ae2f1fe" }
solana-measure = "1.18.16"
solana-program = "1.18.16"
solana-program-runtime = "1.18.16"
solana-rpc-client-api = "1.18.16"
solana-sdk = "1.18.16"
solana-transaction-status = "1.18.16"
spl-associated-token-account = "2.3.0"
spl-token = "3.2"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono", "sqlite"] }
thiserror = "1"
tokio = {version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
tokio-tungstenite = "0.23.1"
#yellowstone-grpc-client = { tag = "v1.15.0+solana.1.18.16", git = "https://github.com/rpcpool/yellowstone-grpc.git" }
#yellowstone-grpc-proto = { tag = "v1.15.0+solana.1.18.16", git = "https://github.com/rpcpool/yellowstone-grpc.git" }
yellowstone-grpc-client = { git = "https://github.com/0xcrust/yellowstone-grpc.git", branch = "protoc-env" }
yellowstone-grpc-proto = { git = "https://github.com/0xcrust/yellowstone-grpc.git", branch = "protoc-env" }
#yellowstone-grpc-client = { path = "../archive/yellowstone-grpc/yellowstone-grpc-client" }
#yellowstone-grpc-proto = { path = "../archive/yellowstone-grpc/yellowstone-grpc-proto" }
whirlpool = { git = "https://github.com/0xcrust/whirlpools.git", branch = "patch/solana-1.18.16", features = ["no-entrypoint"] }
bytemuck = "1.16.1"
safe-transmute = "0.11.3"
rayon = "1.10.0"
tokio-stream = { version = "0.1.15", features = ["sync"] }
#tonic = "0.12.3"
tonic = "0.10.2"
pin-project = "1.1.5"
#geyser-grpc-connector = { tag = "v0.10.6+yellowstone.1.15+solana.1.18", git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git" }

