[package]
name = "biscuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-syn = { workspace = true }
anyhow = { workspace = true }
arrayref = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
borshv1 = { workspace = true }
clap = { workspace = true }
copy = { workspace = true }
dashmap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
once_cell = { workspace = true }
rand.workspace = true
raydium_amm = { workspace = true }
raydium-amm-v3 = { workspace = true }
raydium_client = { workspace = true }
raydium-library = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-devtools-tx = { workspace = true }
solana-measure = { workspace = true }
solana-program = { workspace = true }
solana-program-runtime = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
whirlpool = { workspace = true }
bytemuck = { workspace = true }
safe-transmute = { workspace = true }
sqlx = { workspace = true }
rayon.workspace = true
tokio-stream = { workspace = true }
pin-project = { workspace = true }
hex = "0.4.3"
csv = "1.3.0"
indexmap = "2.3.0"
bincode = "1.3.3"
tracing = "0.1.40"
itertools = "0.13.0"
jsonrpsee = { version = "0.24.2", features = ["server-core"] }
async-channel = "2.3.1"
queues = "1.1.0"
serde_qs = "0.13.0"
base64 = "0.22.1"
helius = "0.2.1"
url = "2.5.2"
flexi_logger = { version = "0.29.0", features = ["compress"] }
lazy_static = "1.5.0"
phf = "0.11.2"
educe = { version = "0.6.0", features = ["PartialEq"] }
envconfig = "0.11.0"
strum = { version = "0.26.3", features = ["derive"] }
rust_decimal = "1.36.0"
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true  }
mpl-token-metadata = "5.1.0"
chrono = "0.4.39"

[target.'cfg(target_arch = "x86_64-unknown-linux-musl")'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}   # OpenSSL only when compiling for x86_64 architectures
